<resources>
    <string name="app_name">유즈북</string>
    <string name="message_title">쪽지함</string>
    <string name="book_shop_title">책방</string>
    <string name="book_search">구매할 책을 검색하세요!</string>
    <string name="recent_update_book">최근 올라온 책</string>
    <string name="login_ko">로그인</string>
    <string name="login_en">login</string>
    <string name="sign_in">회원가입</string>
    <string name="id">이메일</string>
    <string name="password">비밀번호</string>
    <string name="join_in">가입하기</string>
    <string name="book_detail_information">자세한 책 정보를 적어주세요</string>
    <string name="book_name">책 이름</string>
    <string name="book_author">저자</string>
    <string name="book_publish">출판사</string>
    <string name="book_date">출판일(ex.20171005)</string>
    <string name="book_price">정가(ex.17000)</string>
    <string name="write_trace">필기한 흔적이 있나요?</string>
    <string name="line_pencil">밑줄(연필/샤프)</string>
    <string name="line_pen">밑줄(볼펜/형광펜)</string>
    <string name="write_pencil">필기(연필/샤프)</string>
    <string name="write_pen">필기(볼펜/형광펜)</string>
    <string name="research">다시 검색</string>
    <string name="next">다음</string>
    <string name="not_applicable">해당사항 없음</string>
    <string name="preserver_state">보존 상태는 어떤가요?</string>
    <string name="cover_clean">겉표지 깨끗함</string>
    <string name="no_name">이름(서명) 기입 없음</string>
    <string name="no_page_discolor">페이지 변색 없음</string>
    <string name="no_page_damage">페이지 훼손 없음</string>
    <string name="real_picture">실제 사진을 찍어주세요</string>
    <string name="cover">겉표지</string>
    <string name="inside">내부</string>
    <string name="skip">건너뛰기</string>
    <string name="expectation_price">희망하시는 판매 가격을 적어주세요</string>
    <string name="trade_way">원하시는 거래 수단을 선택하세요</string>
    <string name="direct_dealing">직거래</string>
    <string name="delivery">택배</string>
    <string name="trade_area">원하시는 직거래 지역을 선택해주세요</string>
    <string name="area">지역</string>
    <string name="extra_explanation">추가 설명을 자유롭게 적어주세요</string>
    <string name="limit_character">(500자 이내)</string>
    <string name="won">(단위: 원)</string>
    <string name="send_message_to_seller">판매자에게 쪽지 보내기</string>
    <string name="publish_date">출판일</string>
    <string name="book_state">책 상태</string>
    <string name="underline_trace">밑줄 흔적</string>
    <string name="write_trace2">필기 흔적</string>
    <string name="name">이름기입</string>
    <string name="discolor">페이지 변색</string>
    <string name="damage">페이지 훼손</string>
    <string name="trade">거래 수단</string>
    <string name="want_place">원하는 장소</string>
    <string name="empty_id">이메일을 입력해주세요</string>
    <string name="empty_password">비밀번호를 입력해주세요</string>
    <string name="wait">잠시만 기다려주세요.</string>
    <string name="limit_password">* 6자리 이상 입력해주세요.</string>
    <string name="already_regist">이미 등록된 이메일입니다.</string>
    <string name="login_error">잘못된 이메일 혹은 비밀번호 입니다.</string>
    <string name="logout">로그아웃</string>
    <string name="welcome_user">%s 님 환영합니다.</string>
    <string name="empty_bookname">책 이름을 입력해주세요.</string>
    <string name="empty_bookAuthor">책 저자를 입력해주세요.</string>
    <string name="empty_bookPublish">책 출판사를 입력해주세요.</string>
    <string name="empty_bookPrice">책 가격을 입력해주세요.</string>
    <string name="empty_bookDate">출판 날짜를 입력해주세요.</string>
    <string name="empty_expectationPrice">판매 가격을 입력해주세요.</string>
    <string name="not_here">없음</string>
    <string name="here">있음</string>
    <string name="pencil_or_sharp">연필/샤프</string>
    <string name="pen_or_light">볼펜/형광펜</string>
    <string name="clean">깨끗함</string>
    <string name="not_clean">깨끗하지않음</string>
    <string name="can">가능</string>
    <string name="cannot">불가</string>
    <string name="empty_write">필기 여부를 선택하여주세요.</string>
    <string name="empty_tradeway">거래 방법을 선택하여주세요.</string>
    <string name="empty_preserve">보존 상태를 선택하여주세요.</string>
    <string name="price_won">%d 원</string>
    <string name="empty_area">거래 지역을 입력해주세요.</string>
    <string name="empty_extra_explanation">추가 설명을 적지 않으려면 \'건너뛰기\'를 누르세요.</string>
    <string name="select_camera">사진 선택</string>
    <string name="empty_cover_image">책 표지는 반드시 첨부바랍니다.</string>
    <string name="back_twice">한 번 더 누르시면 앱이 종료됩니다.</string>
    <string name="search_result">검색 결과: %d개</string>
    <string name="my_page">마이페이지</string>
    <string name="selling_book">판매 중인 책</string>
    <string name="no_my_book">등록된 책이 없습니다.</string>
    <string name="sold_out_btn">판매 완료하기</string>
    <string name="sold_out">판매 완료</string>
    <string name="book_is_sold_out">이 책은 판매 완료되었습니다.</string>
    <string name="send">전송</string>
</resources>
