<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:gravity="center_horizontal"
        android:text="@string/login_ko"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/id"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_id_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/edit_edge"
            android:ems="10"
            android:inputType="textWebEmailAddress"
            android:padding="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_password_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/edit_edge"
            android:ems="10"
            android:inputType="none|textPassword"
            android:padding="5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/login2_btn"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="80dp"
        android:background="@color/baseColor"
        android:onClick="onClick"
        android:text="@string/login_en"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sign_in_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>
