<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseColor"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_user" />

        <TextView
            android:id="@+id/welcome_user_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/welcome_user"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        app:srcCompat="@drawable/alarm_img" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/book_shop_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:background="@drawable/botton_edge_round"
            android:onClick="onClick"
            android:text="@string/book_shop_title"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/message_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/botton_edge_round"
            android:onClick="onClick"
            android:text="@string/message_title"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/logout_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="fill_horizontal"
        android:onClick="onClick"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
