<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseColor"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        app:srcCompat="@drawable/alarm_img" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/buttonColor"
        android:onClick="onClick"
        android:text="@string/login_ko"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@color/buttonColor"
        android:onClick="onClick"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>
